syntax = "proto3";

package composetoglance.proto;

option java_package = "com.example.composetoglance.proto";
option java_multiple_files = true;

message WidgetDocument {
  WidgetMetadata metadata = 1;
  LayoutNode root = 2;
}

message WidgetMetadata {
  string widget_id = 1;
  string display_name = 2;
  string description = 3;
  WidgetSize size = 4;
}

enum WidgetSize {
  WIDGET_SIZE_UNSPECIFIED = 0;
  WIDGET_SIZE_SMALL = 1;
  WIDGET_SIZE_MEDIUM = 2;
  WIDGET_SIZE_LARGE = 3;
}

message LayoutNode {
  string id = 1;
  LayoutKind kind = 2;
  repeated LayoutProperty properties = 3;
  Modifier modifier = 4;
  repeated LayoutNode children = 5;
  repeated Component components = 6;
}

enum LayoutKind {
  LAYOUT_KIND_UNSPECIFIED = 0;
  LAYOUT_KIND_BOX = 1;
  LAYOUT_KIND_ROW = 2;
  LAYOUT_KIND_COLUMN = 3;
  LAYOUT_KIND_LAZY_COLUMN = 4;
  LAYOUT_KIND_LAZY_ROW = 5;
  LAYOUT_KIND_STACK = 6;
}

message LayoutProperty {
  oneof property {
    Arrangement arrangement = 1;
    Alignment alignment = 2;
    Spacing spacing = 3;
  }
}

message Arrangement {
  Axis axis = 1;
  ArrangementType type = 2;
  Dimension spacing = 3;
}

enum Axis {
  AXIS_UNSPECIFIED = 0;
  AXIS_HORIZONTAL = 1;
  AXIS_VERTICAL = 2;
}

enum ArrangementType {
  ARRANGEMENT_TYPE_UNSPECIFIED = 0;
  ARRANGEMENT_TYPE_START = 1;
  ARRANGEMENT_TYPE_CENTER = 2;
  ARRANGEMENT_TYPE_END = 3;
  ARRANGEMENT_TYPE_SPACE_BETWEEN = 4;
  ARRANGEMENT_TYPE_SPACE_AROUND = 5;
  ARRANGEMENT_TYPE_SPACE_EVENLY = 6;
}

message Alignment {
  HorizontalAlignment horizontal = 1;
  VerticalAlignment vertical = 2;
}

enum HorizontalAlignment {
  H_ALIGN_UNSPECIFIED = 0;
  H_START = 1;
  H_CENTER = 2;
  H_END = 3;
}

enum VerticalAlignment {
  V_ALIGN_UNSPECIFIED = 0;
  V_TOP = 1;
  V_CENTER = 2;
  V_BOTTOM = 3;
}

message Spacing {
  Dimension horizontal = 1;
  Dimension vertical = 2;
}

message Component {
  string id = 1;
  oneof content {
    TextComponent text = 2;
    ImageComponent image = 3;
    ButtonComponent button = 4;
    SpacerComponent spacer = 5;
  }
  Modifier modifier = 10;
}

message TextComponent {
  string text = 1;
  string content_description = 2;
  TextStyle style = 3;
  Color color = 4;
  TextOverflow overflow = 5;
  int32 max_lines = 6;
}

message TextStyle {
  string font_family = 1;
  FontWeight weight = 2;
  Dimension font_size = 3;
  Dimension letter_spacing = 4;
}

enum FontWeight {
  FONT_WEIGHT_UNSPECIFIED = 0;
  FONT_WEIGHT_LIGHT = 1;
  FONT_WEIGHT_NORMAL = 2;
  FONT_WEIGHT_MEDIUM = 3;
  FONT_WEIGHT_SEMIBOLD = 4;
  FONT_WEIGHT_BOLD = 5;
}

enum TextOverflow {
  TEXT_OVERFLOW_UNSPECIFIED = 0;
  CLIP = 1;
  ELLIPSIS = 2;
}

message ImageComponent {
  ResourceRef painter = 1;
  string content_description = 2;
  ContentScale scale = 3;
}

enum ContentScale {
  CONTENT_SCALE_UNSPECIFIED = 0;
  FIT = 1;
  FILL_BOUNDS = 2;
  CROP = 3;
}

message ButtonComponent {
  string text = 1;
  string action_id = 2;
  Color background_color = 3;
  Color text_color = 4;
}

message SpacerComponent {
  Dimension width = 1;
  Dimension height = 2;
}

message Modifier {
  Dimension width = 1;
  Dimension height = 2;
  Padding padding = 3;
  Margin margin = 4;
  CornerRadius corner_radius = 5;
  Color background_color = 6;
  Color border_color = 7;
  Dimension border_width = 8;
  bool fill_max_width = 9;
  bool fill_max_height = 10;
  Alignment alignment = 11;
}

message Padding {
  Dimension start = 1;
  Dimension top = 2;
  Dimension end = 3;
  Dimension bottom = 4;
}

message Margin {
  Dimension start = 1;
  Dimension top = 2;
  Dimension end = 3;
  Dimension bottom = 4;
}

message CornerRadius {
  Dimension top_start = 1;
  Dimension top_end = 2;
  Dimension bottom_end = 3;
  Dimension bottom_start = 4;
}

message Dimension {
  oneof unit {
    float dp = 1;
    float sp = 2;
    float percent = 3;
  }
}

message Color {
  oneof value {
    uint32 argb = 1;
    ResourceRef resource = 2;
  }
}

message ResourceRef {
  string name = 1;
  ResourceType type = 2;
}

enum ResourceType {
  RESOURCE_TYPE_UNSPECIFIED = 0;
  DRAWABLE = 1;
  STRING = 2;
  COLOR = 3;
}

